# grym-synth

./: .gitignore  Dockerfile  PROJECT_IDENTIFIER.md  README.md  docker-compose.yml  jest.config.js  next.config.js  package.json  tsconfig.json  tsconfig.test.json
docs/: ADR-001-SIMPLIFIED-ERROR-TESTING.md  ADR-002-MESSAGE-VALIDATION.md  ADVANCED-VISUALIZATION-SYSTEM-PROMPT.md  AI-ASSISTED-CREATION-TOOLS-PROMPT.md  API-REFERENCE.md  ARCHITECTURE.md  ASSETS.md  AUDIO-LEARNING-HUB-IMPLEMENTATION-STATUS.md  AUDIO-LEARNING-IMPLEMENTATION.md  AUDIO-PATTERN-LEARNING-STRATEGY.md  AUDIO-VISUALIZATION.md  AUDIOLDM-QUICKSTART.md  AUDIOLDM-README.md  AUDIOLDM-SERVICE-IMPLEMENTATION.md  AUDIOLDM-TECHNICAL-REFERENCE.md  AUTOMATED-WORKFLOW-IMPLEMENTATION-PLAN.md  BIDIRECTIONAL-FEEDBACK-SYSTEM.md  BROWSER-TESTING-IMPLEMENTATION-PLAN.md  BROWSER-TESTING-VALIDATION-PLAN.md  BROWSER-TESTING.md  CHANGELOG.md  COLLABORATIVE-EDITING-SYSTEM-PROMPT.md  CONTEXT-MANAGEMENT-SYSTEM.md  CONTEXT-PASSING-IMPLEMENTATION.md  CONTRIBUTING.md  CROSS-PLATFORM-DEPLOYMENT-SYSTEM-PROMPT.md  DEVELOPER-GUIDE.md  DEVELOPMENT-ROADMAP.md  DEVELOPMENT-STRATEGY-SUMMARY.md  DOCUMENTATION-AND-ONBOARDING-SYSTEM-PROMPT.md  DYNAMIC-CAPABILITY-SCORING.md  ERROR-HANDLING-FIXES.md  ERROR-HANDLING-GUIDE.md  ERROR-HANDLING-INDEX.md  ERROR-HANDLING-STATUS.md  ERROR-HANDLING-SUMMARY.md  ERROR-HANDLING-TEST-PLAN.md  ERROR-INTEGRATION-CHECKLIST.md  ERROR-PATTERNS.md  EXPORT-FUNCTIONALITY-IMPLEMENTATION-PLAN.md  (+128 more)
ollama/: Dockerfile
scripts/: README.md  (+33 more)
src/physics/: Cargo.toml
src/physics/src/: lib.rs  types.d.ts  worker.ts
(+710 files in other folders)
