[package]
name = "grym-physics"
version = "0.1.0"
edition = "2021"
authors = ["GrymSynth Team"]
description = "WebAssembly physics engine for GrymSynth parameter control"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rayon = "1.8"
nalgebra = "0.32"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "WebGl2RenderingContext",
]}
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
